# carbonstructures

./: 404.html  CHANGELOG.md  MANIFEST.in  README.md  armcntdata.csv  extratoml.txt  index.html  mkdocs.yml  objects.inv  piston.data  pyproject.toml  rectsheet_1by2.data  test sandwich.xyz  test.xyz  test40.xyz  testsandwich.xyz
.github/workflows/: tests.yaml
docs/: index.md
example_docs/about/: changelog.html  conduct.html  license.html
example_docs/code/: hints.html  source.html  tests.html
reference/: SUMMARY.html  generalstructure.html  generatecnt.html  generatepiston.html  generatesandwich.html  generatesheet.html  testadd.html
search/: search_index.js  search_index.json
src/: armcnt_diameter5length10.xyz  armcnt_diameter8length20.xyz  cnt_diameter10length10.xyz  generalstructure.py  generatecnt.py  generatepiston.py  generatesandwich.py  generatesheet.py  piston_17.192336by19.852000by18.420360typearmrad4.054715796.xyz  piston_17.192336by19.852000by19.852000typezigrad3.9739692150273926.xyz  piston_17.192336by19.852000by3.684072typearmrad4.054715796.xyz  pistongen.py  rectsheet_27.016528by28.360000.xyz  rectsheet_3.663287458008176by2.8199999999999994.data  rectsheet_36.840721by28.360000.xyz  rectsheet_7.368144by9.217000.xyz  rectsheet_8.54767073535241by9.165.data  rectsheet_8.596168by11.344000.xyz  rectsheet_hibyhi.xyz  sandwich_8.596168by11.344000gapsize4.000000.data  sandwich_8.596168by11.344000gapsize4.000000.xyz  sandwich_99.469946by119.821000gapsize40.000000.xyz  testadd.py  testsheet 10X10Y.xyz  testsheet.xyz  zigcnt_diameter8length20.xyz
(+99 files in other folders)
