[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-structures"
description="A Python package for generating atomic configurations of various carbon structures (e.g. graphene sheets, CNTs)"
version = "0.0.1"
readme = "README.md"
license = { text = "BSD-3" }
authors = [{ name = "Anthony Dee", email = "ahd68@cornell.edu" }, { name = "Nhi Nguyen", email = "npn25@cornell.edu" }]
keywords = ["carbon structures", "carbon manipulation", "lammps"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9, <3.12"
dependencies = ["numpy", "scipy.optimize"]

[project.optional-dependencies]
dev = ["black>=23.7.0", "isort>=5.12.0", "pytest>=7.4.0", "pytest-cov>=3.0.0", "ruff>=0.0.285"]
docs = [
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.1"
]